--- a/HTML-CSS/downloads.html
+++ b/HTML-CSS/downloads.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="with-account.css">
-    <title>Home</title>
+    <title>Downloads</title>
     <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
 </head>
 <body>
-    <!-- Landing page(with ACCOUNT) -->
-    <header>
+      <header>
         <!-- NAVBAR -->
         <nav class="navbar bg-black">
-            <div class="container-fluid col-lg-12 col-sm-6" id="nav">
+            <div class="container-fluid">
               <a class="navbar-brand">
                 <img src="/Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
                 FlexStream
@@ -30,36 +29,23 @@
                             <a class="dropdown-item" href="settings.html">Settings</a>
                             <a class="dropdown-item" href="log-in.html">Log Out</a>
                         </div>
-                    </div> &nbsp; &nbsp; &nbsp;
-                    <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
-                    <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp; &nbsp;
-                    <a class="nav-link" href="downloads.html">Downloads</a> &nbsp; &nbsp;
+                    </div> &nbsp; &nbsp;
+                    <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp;
+                    <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp;
+                    <a class="nav-link" href="#">Downloads</a> &nbsp; &nbsp;
               </div>
             </div>
         </nav>
         <!-- END OF NAVBAR -->
-    </header>
+      </header>
+      <div class="container text-center" id="my-list">
+          Downloads
+      </div>
+      <br>
+      <br>
     <main>
-        <section>
-            <!-- FIRST ROW -->
-            <div class="container" style="padding: 0%;">
-                <div class="row " id="first-row">
-                  <div class="container search-column">
-                    <p id="search">With unlimited shows to watch!</p>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2 container" type="search" placeholder="Search movies, series, genres etc..." aria-label="Search">
-                        <button class="btn bg-info" type="submit">Search</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-              <!-- END OF FIRST ROW -->
-              <br>
-              <br>
-              <br>
-              <br>
-              <!-- START OF MOVIE LIST -->
-              <P class="cap">POPULAR MOVIES</P>
+      <!-- START OF MOVIES -->
+      <p class="cap">MOVIES</p>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
@@ -73,7 +59,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="col-lg-3 col-md-6  col-sm-6 pb-4">
+                  <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
                             <img src="/Images/The-Corpse-Bride.jpg" class="card-img-top" alt="The Corpse Bride" style="height: 340px;">
@@ -109,13 +95,14 @@
                 </div>
               </div>
             </div>
+            <!-- END OF MOVIES -->
             <br>
             <br>
             <br>
             <br>
-            <!-- END OF MOVIE LIST -->
-            <!-- START OF SERIES LIST -->
-            <p class="cap">POPULAR SERIES</p>
+            <br>
+            <!-- START OF SERIES -->
+            <p class="cap">SERIES</p>
             <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
@@ -146,7 +133,7 @@
                             <img src="/Images/Enola.jpg" class="card-img-top" alt="Enola Holmes" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>Enola Holmes</strong></p>
-                                <a href="watching-page.html" class="btn">Watch Now</a>
+                                <a href="#" class="btn">Watch Now</a>
                             </div>
                         </div>
                     </div>
@@ -165,22 +152,22 @@
                 </div>
               </div>
             </div>
-            <!-- END OF SERIES LIST -->
-        </section>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <footer>
-            <div class="container text-center">
-                FlexStream © 2022-2023
-                By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
-            </div>
-        </footer>
-        <br>
+            <!-- END OF SERIES -->
+    </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <div class="container text-center">
+            FlexStream © 2022-2023
+            By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
+        </div>
+    </footer>
+    <br>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
