--- a/HTML-CSS/watchnow.html
+++ b/HTML-CSS/watchnow.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
     <title>Enola Holmes</title>
+    <style>
+        video {
+            width: 1000px;
+        }
+    </style>
 </head>
 <body class="bg-black">
 <div class="container">
