--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -24,7 +24,7 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="settings.html">My Account</a>
                         <a class="dropdown-item" href="my-list.html">My List</a>
-                        <a class="dropdown-item" href="#">Downloads</a>
+                        <a class="dropdown-item" href="downloads.html">Downloads</a>
                         <a class="dropdown-item" href="settings.html">Settings</a>
                         <a class="dropdown-item" href="log-in.html">Log Out</a>
                     </div>
