--- a/sign-in2.html
+++ b/sign-in2.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sign-in.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
-    <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
-    <title>Log In</title>
+    <link rel="icon" type="image/x-icon" href="Images/Brown and White Named Warner & Spencer Logo-2.png">
+    <title>Sign In</title>
 </head>
 <body class="bg-black text-white">
 <div class="container-fluid row mt-5">
 <div class="container-fluid row mt-5">
     <div class="col-sm-3"></div>
     <div class="col-sm-6 text-center text-info">
-        <h4 class="p-4">Login to continue.</h4> 
+        <h4 class="p-4">Finish setting up your account.</h4> 
         <span class="p-4"><input type="email" class="form-control p-2" placeholder="Email Address/Username"></span>
         <span class="p-4"><input type="password" class="form-control" placeholder="Password"></span>
         <br>
         <br>
-        <a href="with-account.html"><button class="btn btn-info" type="submit">Log In</button></a>
+        <a href="sign-in3.html"><button class="btn btn-info" type="submit">Next</button></a>
         <br>
         <br>
         <br>
@@ -34,6 +34,7 @@
         <br>
 
     </div>
+    
 <div class="col-sm-3"></div>
 </div>
 </body>
