--- a/watching-page.html
+++ b/watching-page.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="watching-page.css">
-    <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
+    <link rel="icon" type="image/x-icon" href="Images/Brown and White Named Warner & Spencer Logo-2.png">
     <title>Enola Holmes</title>
 </head>
     <!-- Watching Page -->
     <nav class="navbar bg-black">
         <div class="container-fluid col-lg-12 col-sm-6" id="nav">
           <a class="navbar-brand">
-            <img src="/Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
+            <img src="Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
             FlexStream
           </a>
           <div class="d-flex">
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="/Images/me nobg.png" alt="account-pic" height="30" width="30" style="border: 2px solid skyblue; border-radius: 40px;">
+                        <img src="Images/me nobg.png" alt="account-pic" height="30" width="30" style="border: 2px solid skyblue; border-radius: 40px;">
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="settings.html">My Account</a>
