--- a/with-account.html
+++ b/with-account.html
@@ -6,52 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="with-account.css">
-    <title>Downloads</title>
-    <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
+    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="Images/Brown and White Named Warner & Spencer Logo-2.png">
 </head>
 <body>
-      <header>
+    <!-- Landing page(with ACCOUNT) -->
+    <header>
         <!-- NAVBAR -->
         <nav class="navbar bg-black">
-            <div class="container-fluid">
+            <div class="container-fluid col-lg-12 col-sm-6" id="nav">
               <a class="navbar-brand">
-                <img src="/Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
+                <img src="Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
                 FlexStream
               </a>
               <div class="d-flex">
                     <div class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="/Images/me nobg.png" alt="account-pic" height="30" width="30" style="border: 2px solid skyblue; border-radius: 40px;">
+                            <img src="Images/me nobg.png" alt="account-pic" height="30" width="30" style="border: 2px solid skyblue; border-radius: 40px;">
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="my-list.html">My List</a>
                             <a class="dropdown-item" href="downloads.html">Downloads</a>
                             <a class="dropdown-item" href="settings.html">Settings</a>
-                            <a class="dropdown-item" href="log-in.html">Log Out</a>
+                            <a class="dropdown-item" href="landing.html">Log Out</a>
                         </div>
-                    </div> &nbsp; &nbsp;
-                    <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp;
-                    <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp;
-                    <a class="nav-link" href="#">Downloads</a> &nbsp; &nbsp;
+                    </div> &nbsp; &nbsp; &nbsp;
+                    <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
+                    <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp; &nbsp;
+                    <a class="nav-link" href="downloads.html">Downloads</a> &nbsp; &nbsp;
               </div>
             </div>
         </nav>
         <!-- END OF NAVBAR -->
-      </header>
-      <div class="container text-center" id="my-list">
-          Downloads
-      </div>
-      <br>
-      <br>
+    </header>
     <main>
-      <!-- START OF MOVIES -->
-      <p class="cap">MOVIES</p>
+        <section>
+            <!-- FIRST ROW -->
+            <div class="container" style="padding: 0%;">
+                <div class="row " id="first-row">
+                  <div class="container search-column">
+                    <p id="search">With unlimited shows to watch!</p>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2 container" type="search" placeholder="Search movies, series, genres etc..." aria-label="Search">
+                        <button class="btn bg-info" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <!-- END OF FIRST ROW -->
+              <br>
+              <br>
+              <br>
+              <br>
+              <!-- START OF MOVIE LIST -->
+              <P class="cap">POPULAR MOVIES</P>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/Joker.jpg" class="card-img-top" alt="joker" style="height: 340px;">
+                            <img src="Images/Joker.jpg" class="card-img-top" alt="joker" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>Joker</strong></p>
                                 <a href="#" class="btn">Watch Now</a>
@@ -59,10 +73,10 @@
                         </div>
                     </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
+                  <div class="col-lg-3 col-md-6  col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/The-Corpse-Bride.jpg" class="card-img-top" alt="The Corpse Bride" style="height: 340px;">
+                            <img src="Images/The-Corpse-Bride.jpg" class="card-img-top" alt="The Corpse Bride" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>Corpse Bride</strong></p>
                                 <a href="#" class="btn">Watch Now</a>
@@ -73,7 +87,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/The-Purge.jpg" class="card-img-top" alt="The Purge" style="height: 340px;">
+                            <img src="Images/The-Purge.jpg" class="card-img-top" alt="The Purge" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>The Purge</strong></p>
                                 <a href="#" class="btn">Watch Now</a>
@@ -84,7 +98,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/The-Matrix.jpg" class="card-img-top" alt="The Matrix" style="height: 340px;">
+                            <img src="Images/The-Matrix.jpg" class="card-img-top" alt="The Matrix" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>The Matrix</strong></p>
                                 <a href="#" class="btn">Watch Now</a>
@@ -95,20 +109,19 @@
                 </div>
               </div>
             </div>
-            <!-- END OF MOVIES -->
             <br>
             <br>
             <br>
             <br>
-            <br>
-            <!-- START OF SERIES -->
-            <p class="cap">SERIES</p>
+            <!-- END OF MOVIE LIST -->
+            <!-- START OF SERIES LIST -->
+            <p class="cap">POPULAR SERIES</p>
             <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/GOT.jpg" class="card-img-top" alt="Game of Thrones" style="height: 340px;">
+                            <img src="Images/GOT.jpg" class="card-img-top" alt="Game of Thrones" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>Game of Thrones</strong></p>
                                 <a href="#" class="btn">Watch Now</a>
@@ -119,7 +132,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/Queens-Gambit.jpg" class="card-img-top" alt="Queen's Gambit" style="height: 340px;">
+                            <img src="Images/Queens-Gambit.jpg" class="card-img-top" alt="Queen's Gambit" style="height: 340px;">
                             <div class="info">
                                 <p><strong>Queen's Gambit</strong></p>
                                 <a href="#" class="btn">Watch Now</a>
@@ -130,10 +143,10 @@
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/Enola.jpg" class="card-img-top" alt="Enola Holmes" style="height: 340px;">
+                            <img src="Images/Enola.jpg" class="card-img-top" alt="Enola Holmes" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>Enola Holmes</strong></p>
-                                <a href="#" class="btn">Watch Now</a>
+                                <a href="watching-page.html" class="btn">Watch Now</a>
                             </div>
                         </div>
                     </div>
@@ -141,7 +154,7 @@
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
                     <div class="wrapper">
                         <div class="card">
-                            <img src="/Images/Killing-Eve.jpg" class="card-img-top" alt="Killing Eve" style="height: 340px;">
+                            <img src="Images/Killing-Eve.jpg" class="card-img-top" alt="Killing Eve" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>Killing Eve</strong></p>
                                 <a href="#" class="btn">Watch Now</a>
@@ -152,22 +165,22 @@
                 </div>
               </div>
             </div>
-            <!-- END OF SERIES -->
-    </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <footer>
-        <div class="container text-center">
-            FlexStream © 2022-2023.
-            By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
-        </div>
-    </footer>
-    <br>
+            <!-- END OF SERIES LIST -->
+        </section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer>
+            <div class="container text-center">
+                FlexStream © 2022-2023.
+                By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
+            </div>
+        </footer>
+        <br>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
